Updated Dependencies and migrated from cra to vite

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
+    "cryptoverse": "file:",
     "html-react-parser": "^1.4.2",
     "millify": "^4.0.0",
     "moment": "^2.29.4",
@@ -19,14 +20,12 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.0"
   }
 }
